# mouseVC

./: pyproject.toml
mouseVC/: __init__.py  run_pipeline.py
mouseVC/Step1_InitialAnalysis/: ClassSeparation.ipynb  ClassSeparation.py  definitions.py
mouseVC/Step2_GlutAnalysis/: ReferenceMapping.py
